[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-lw2"
version = "0.1.0"
description = "Homeassistant Lightware LW2 Integration"
authors = [{ name = "Intermediate Engineering GmbH", email = "info@im-en.com" }]
license = { text = "MIT" }
dependencies = []
readme = "README.md"
requires-python = ">=3.13"

[tool.uv.sources]
lw2 = { path = "lightware-lw2", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["custom_components/lightware-lw2"]

[tool.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant"]
combine-as-imports = true

[tool.ruff]
target-version = "py313"

[tool.tox.env.lint]
description = "Run ruff for linting"
deps = ["ruff"]
commands = [["ruff", "check", "."]]

[tool.tox.env.fix]
description = "Autoformat code using ruff"
deps = ["ruff"]
commands = [["ruff", "check", ".", "--fix"]]

[dependency-groups]
dev = ["Homeassistant>=2025.3.0", "pytest>=8.3.4", "pytest-asyncio>=0.25.3"]
