[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "ha-lw2"
version = "0.1.0"
description = "Homeassistant Lightware LW2 Integration"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Intermediate Engineering GmbH", email = "info@im-en.com" } ]
requires-python = ">=3.13"

classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "lw2==0.1",
]

[dependency-groups]
dev = [
  "homeassistant>=2025.3",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "ruff>=0.11.5",
]

[tool.hatch.build.targets.wheel]
packages = [ "custom_components/lightware_lw2" ]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
